# DwarvenArchive

./: MANIFEST.in  README.md  dwarvenarchive.desktop  pyproject.toml
dwarvenarchive/: __init__.py  __main__.py  app.py  formats.py  window.py
dwarvenarchive/Messages/: de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
